# pyhc-actions

./: README.md  pyproject.toml  schedule.json
.github/workflows/: release.yml  test.yml  update-schedule.yml
phep3-compliance/: action.yml  get_min_python.py
pyhc-env-compat/: action.yml
src/pyhc_actions/: __init__.py
src/pyhc_actions/common/: __init__.py  parser.py  reporter.py
src/pyhc_actions/env_compat/: __init__.py  fetcher.py  main.py  uv_resolver.py
src/pyhc_actions/phep3/: __init__.py  checker.py  config.py  main.py  metadata_extractor.py  pypi_fetcher.py  schedule.py
tests/: __init__.py  test_compat_checker.py  test_env_compat_main.py  test_fetcher.py  test_metadata_extractor.py  test_parser.py  test_phep3_checker.py  test_reporter.py
tests/fixtures/integration/: constraints.txt  empty-packages.txt  missing-baseline-packages.txt  pyproject.toml
tests/fixtures/integration/legacy-package/: setup.py
